@@ -1,3 +1,6 @@
+# use SIMD CPU instructions (Altivec, SSE)?
+SIMD=1
+
 # where is the STK installation?
 # (uncomment the line with # to disable STK support)
 #STK=/usr/local/lib/stk
