@@ -46,7 +46,7 @@ BUILDTYPE=single
 SYSCONFIG=$(BUILDPATH)config-$(PLATFORM)-$(RTSYS)-$(COMPILER).txt
 SYSDEFAULT=$(BUILDPATH)$(PLATFORM)\$(RTSYS)\config-$(COMPILER).def
 
-OPTIONS=-f $(BUILDPATH)nmake-sub.mak \
+OPTIONS=/NOLOGO /f $(BUILDPATH)nmake-sub.mak \
 	PLATFORM=$(PLATFORM) RTSYS=$(RTSYS) COMPILER=$(COMPILER) \
 	BUILDPATH=$(BUILDPATH) PKGINFO=$(PKGINFO) BUILDCLASS=$(BUILDCLASS)
 
