@@ -55,6 +55,7 @@ TESTS TO DO:
 - PD: problems with timed buffer redrawing (takes a lot of cpu time)
 - hard thread termination upon object destruction doesn't seem to work properly -> crash
 - Max rounding bug ... buffer resize could be one sample less!
+
 - flext_dsp: Max/MSP doesn't correctly report in/out channel counts
 
 - PD: figure out what "pointer" messages do and whether they are correctly implemented in flext
@@ -62,4 +63,4 @@ TESTS TO DO:
 - Max buffer~ resize: flext_base::buffer::Frames(): must we use buffer or system sample rate?
 
 - check whether m_dsp gets called upon deletion of a used buffer (PD and MaxMSP may behave differently).
-    -> PD does call m_dsp
+	-> PD does call m_dsp, Max/MSP does not
