@@ -23,6 +23,7 @@ Version history:
 - reconsidered flext::buffer::Update
 - enhanced buffer handling
 - support for buffer locking (flext::buffer::Lock() and Unlock()) - it's a must for Max/MSP at least
+- use new PD idle callback for queues messages (currently in devel_0_38)
 
 0.4.7:
 - added flext::GetBool (just because flext::GetInt has been there for a while)
